bk_ida/gobmkida/c3/do_owl_attack
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_attack/src/engine/owl.c:1636:10: error: conflicting types for 'do_owl_attack'
__int64  do_owl_attack( 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_attack/src/engine/owl.c:135:12: note: previous declaration is here
static int do_owl_attack(int str, int *move, int *wormid,
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_attack/src/engine/owl.c:1795:10: error: use of undeclared identifier 'eyevalue'
v140 = ( eyevalue)-1; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_attack/src/engine/owl.c:2226:29: error: use of undeclared identifier 'unk_4AD54A'
v144.name = ( const char *)&unk_4AD54A; 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_attack/src/engine/owl.c:2382:9: error: use of undeclared identifier 'byte_9C689F'
while ( byte_9C689F[v74] != ( _BYTE)v129 || v72->goal[v74 - 1] != 1 ) 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_attack/src/obj/1/owl.o] Error 1
